--- a/index.html
+++ b/index.html
@@ -202,49 +202,61 @@
 
 
        <!-- Contact Form -->
-        <div class="flex justify-center items-center  ">
-        <div class="w-50 md:w-1/2 flex justify-center items-center">
-            <form
-            action="https://api.web3forms.com/submit"
-            method="POST"
-            id="contactForm"
-            class="bg-gray-100 p-6 md:p-8 w-full max-w-lg rounded-lg shadow-lg">
-            <input type="hidden" name="access_key" value="5df87373-b4ae-4492-8bf2-adf2d7ba9a7a">
-            <input type="hidden" name="email" value="adarshofficial268@gmail.com">
+        <!-- Contact Form -->
+<div class="flex justify-center items-center  ">
+  <div class="w-50 md:w-1/2 flex justify-center items-center">
+    <form
+      action="https://api.web3forms.com/submit"
+      method="POST"
+      id="contactForm"
+      class="bg-gray-100 p-6 md:p-8 w-full max-w-lg rounded-lg shadow-lg">
+      <input type="hidden" name="access_key" value="5df87373-b4ae-4492-8bf2-adf2d7ba9a7a">
+      <input type="hidden" name="email" value="adarshofficial268@gmail.com">
 
-            <div class="mb-4">
-                <input
-                type="text"
-                class="w-full border border-gray-300 rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-                placeholder="Your Name" />
-            </div>
-            <div class="mb-4">
-                <input
-                type="email"
-                class="w-full border border-gray-300 rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-                placeholder="Your Email" />
-            </div>
-            <div class="mb-4">
-                <input
-                type="text"
-                class="w-full border border-gray-300 rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-                placeholder="Subject" />
-            </div>
-            <div class="mb-4">
-                <textarea
-                class="w-full border border-gray-300 rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-                rows="7"
-                placeholder="Message"></textarea>
-            </div>
-            <div class="mt-4">
-                <input
-                type="submit"
-                value="Send Message"
-                class="w-full bg-blue-500 text-white py-3 px-5 rounded-md hover:bg-blue-600 transition" />
-            </div>
-            </form>
-        </div>
-        </div>
+      <div class="mb-4">
+        <input
+          type="text"
+          name="name"
+          class="w-full border border-gray-300 rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+          placeholder="Your Name"
+          required />
+      </div>
+      <div class="mb-4">
+        <input
+          type="email"
+          name="email"
+          class="w-full border border-gray-300 rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+          placeholder="Your Email"
+          required />
+      </div>
+      <div class="mb-4">
+        <input
+          type="text"
+          name="subject"
+          class="w-full border border-gray-300 rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+          placeholder="Subject"
+          required />
+      </div>
+      <div class="mb-4">
+        <textarea
+          name="message"
+          class="w-full border border-gray-300 rounded-md p-3 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+          rows="7"
+          placeholder="Message"
+          required></textarea>
+      </div>
+      <div class="mt-4">
+        <input
+          type="submit"
+          value="Send Message"
+          class="w-full bg-blue-500 text-white py-3 px-5 rounded-md hover:bg-blue-600 transition" />
+      </div>
+    </form>
+  </div>
+</div>
+<!-- script form validation -->
+
+
   
         <!-- social media -->
 
@@ -284,16 +296,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 
-    <script>
-      // JavaScript to toggle the menu on small screens
-      const hamburgerButton = document.getElementById("hamburger-button");
-      const menu = document.getElementById("menu");
-
-      hamburgerButton.addEventListener("click", () => {
-        // Toggle visibility of the menu
-        menu.classList.toggle("hidden");
-      });
-    </script>
+      <script src="script.js"></script>
 
   </body>
 </html>
