--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           ><i class="fas fa-envelope"></i> Email</a
         >
         <a
-          href="https://github.com/defender268"
+          href="https://github.com/adarshr268"
           class="inline-block bg-gray-900 text-white py-3 px-6 rounded-full shadow-lg hover:bg-gray-700 transition ml-4"
           ><i class="fab fa-github"></i> GitHub</a
         >
